--- a/html-css/Module10/style/style.css
+++ b/html-css/Module10/style/style.css
@@ -32,7 +32,10 @@
     font-weight: normal;
     font-size: 14px;
     text-decoration: none;
+    color: #000000;
 }
-.header__link{
-    object-fit: cover;
+}
+.wrapper_map{
+    margin: 0px auto;
+    width: 80%;
 }
